// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should handle next click 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Slider>
      <SliderWrapper>
        <div
          className="slider-wrapper"
        >
          <div
            className="slider"
          >
            <div
              className="slider__container"
              style={
                Object {
                  "transform": "translate3d(0px, 0, 0)",
                }
              }
            >
              <SliderItem
                id="capitana-marvel"
                key="0"
                movie="https://images-2.wuaki.tv/system/artworks/86665/master/capitana-marvel-1560352921-width217-quality80.jpeg"
                score={7}
                votes="6,5K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/capitana-marvel"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/capitana-marvel"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-2.wuaki.tv/system/artworks/86665/master/capitana-marvel-1560352921-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={7}
                    votes="6,5K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          7
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          6,5K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="a-47-metros"
                key="1"
                movie="https://images-3.wuaki.tv/system/artworks/54649/master/a-47-metros-1558460397-width217-quality80.jpeg"
                score={5.6}
                votes="1,6K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/a-47-metros"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/a-47-metros"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-3.wuaki.tv/system/artworks/54649/master/a-47-metros-1558460397-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={5.6}
                    votes="1,6K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          5.6
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          1,6K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="green-book"
                key="2"
                movie="https://images-2.wuaki.tv/system/artworks/86659/master/green-book-1558483188-width217-quality80.jpeg"
                score={8.3}
                votes="4K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/green-book"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/green-book"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-2.wuaki.tv/system/artworks/86659/master/green-book-1558483188-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={8.3}
                    votes="4K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          8.3
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          4K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="mascotas"
                key="3"
                movie="https://images-2.wuaki.tv/system/artworks/43779/master/mascotas-1558452275-width217-quality80.jpeg"
                score={6.1}
                votes="5,6K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/mascotas"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/mascotas"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-2.wuaki.tv/system/artworks/43779/master/mascotas-1558452275-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={6.1}
                    votes="5,6K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          6.1
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          5,6K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="mula"
                key="4"
                movie="https://images-2.wuaki.tv/system/artworks/89878/master/mula-1558485497-width217-quality80.jpeg"
                score={6.5}
                votes="1,8K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/mula"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/mula"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-2.wuaki.tv/system/artworks/89878/master/mula-1558485497-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={6.5}
                    votes="1,8K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          6.5
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          1,8K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="escape-room-2019"
                key="5"
                movie="https://images-0.wuaki.tv/system/artworks/89879/master/escape-room-2019-1559899512-width217-quality80.jpeg"
                score={6.4}
                votes="1,5K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/escape-room-2019"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/escape-room-2019"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-0.wuaki.tv/system/artworks/89879/master/escape-room-2019-1559899512-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={6.4}
                    votes="1,5K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          6.4
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          1,5K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="perdiendo-el-este"
                key="6"
                movie="https://images-1.wuaki.tv/system/artworks/86635/master/perdiendo-el-este-1559228752-width217-quality80.jpeg"
                score={4.2}
                votes="20"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/perdiendo-el-este"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/perdiendo-el-este"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-1.wuaki.tv/system/artworks/86635/master/perdiendo-el-este-1559228752-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={4.2}
                    votes="20"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          4.2
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          20
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
              <SliderItem
                id="creed-ii-la-leyenda-de-rocky"
                key="7"
                movie="https://images-3.wuaki.tv/system/artworks/79289/master/creed-ii-la-leyenda-de-rocky-1558478964-width217-quality80.jpeg"
                score={6.7}
                votes="2,3K"
              >
                <div
                  className="slider-item"
                >
                  <Link
                    className="slider-item-image"
                    to="/movies/creed-ii-la-leyenda-de-rocky"
                  >
                    <a
                      className="slider-item-image"
                      href="/movies/creed-ii-la-leyenda-de-rocky"
                      onClick={[Function]}
                    >
                      <img
                        alt=""
                        src="https://images-3.wuaki.tv/system/artworks/79289/master/creed-ii-la-leyenda-de-rocky-1558478964-width217-quality80.jpeg"
                        width="100%"
                      />
                    </a>
                  </Link>
                  <Scores
                    score={6.7}
                    votes="2,3K"
                  >
                    <div
                      className="score"
                    >
                      <span
                        className="score_rate undefined"
                      >
                        <span
                          className="icon__rate"
                        >
                          6.7
                        </span>
                      </span>
                      <span
                        className="score_counter undefined"
                      >
                        <span
                          className="icon__profile"
                        >
                          2,3K
                        </span>
                      </span>
                    </div>
                  </Scores>
                </div>
              </SliderItem>
            </div>
          </div>
        </div>
      </SliderWrapper>
    </Slider>
  </Router>
</BrowserRouter>
`;

exports[`Slider should render Movies in Sliders 1`] = `
<SliderWrapper>
  <div
    className="slider"
  >
    <div
      className="slider__container"
      style={
        Object {
          "transform": "translate3d(0px, 0, 0)",
        }
      }
    >
      <SliderItem
        id="capitana-marvel"
        key="0"
        movie="https://images-2.wuaki.tv/system/artworks/86665/master/capitana-marvel-1560352921-width217-quality80.jpeg"
        score={7}
        votes="6,5K"
      />
      <SliderItem
        id="a-47-metros"
        key="1"
        movie="https://images-3.wuaki.tv/system/artworks/54649/master/a-47-metros-1558460397-width217-quality80.jpeg"
        score={5.6}
        votes="1,6K"
      />
      <SliderItem
        id="green-book"
        key="2"
        movie="https://images-2.wuaki.tv/system/artworks/86659/master/green-book-1558483188-width217-quality80.jpeg"
        score={8.3}
        votes="4K"
      />
      <SliderItem
        id="mascotas"
        key="3"
        movie="https://images-2.wuaki.tv/system/artworks/43779/master/mascotas-1558452275-width217-quality80.jpeg"
        score={6.1}
        votes="5,6K"
      />
      <SliderItem
        id="mula"
        key="4"
        movie="https://images-2.wuaki.tv/system/artworks/89878/master/mula-1558485497-width217-quality80.jpeg"
        score={6.5}
        votes="1,8K"
      />
      <SliderItem
        id="escape-room-2019"
        key="5"
        movie="https://images-0.wuaki.tv/system/artworks/89879/master/escape-room-2019-1559899512-width217-quality80.jpeg"
        score={6.4}
        votes="1,5K"
      />
      <SliderItem
        id="perdiendo-el-este"
        key="6"
        movie="https://images-1.wuaki.tv/system/artworks/86635/master/perdiendo-el-este-1559228752-width217-quality80.jpeg"
        score={4.2}
        votes="20"
      />
      <SliderItem
        id="creed-ii-la-leyenda-de-rocky"
        key="7"
        movie="https://images-3.wuaki.tv/system/artworks/79289/master/creed-ii-la-leyenda-de-rocky-1558478964-width217-quality80.jpeg"
        score={6.7}
        votes="2,3K"
      />
    </div>
  </div>
  <SlideButton
    onClick={[Function]}
    type="next"
  />
</SliderWrapper>
`;
